@@ -4,6 +4,12 @@ Changelog
 2.1.3 (unreleased)
 ------------------
 
+- When a parent is not of the same type of a folder, if folder acquire constraint,
+  the allowed types are the intersection of globally allowed types in folder
+  and locally allowed types of its parent.
+  This fixes http://dev.plone.org/plone/ticket/11950.
+  [thomasdesvenain]
+
 - For collections displayed in table view, show localized date-format.
   Fixes https://dev.plone.org/plone/ticket/11155
   [WouterVH]
